# flash-attention

./: .gitignore  CMakeLists.txt  README.md  bench.py  flash.cu  flash_2d.cu  main.cpp
.zed/: tasks.json
benchmarks/: bench.py
flash/: CMakeLists.txt  KernelParameters.hpp  block_wmma.cu  block_wmma_async.cu  block_wmma_sync.cu  common.hpp  cuda_constants.hpp  flash_2d.cu  flash_naive.cu  flash_scalar2d_row_tile.cu  kernel_mma.cuh  kernel_mma_qreg.cuh  kernel_mma_qreg_async.cuh  kernel_mma_qreg_f32x4load.cuh  kernel_mma_swizzle.cuh  kernel_mma_sync.cuh  kernel_mma_sync_swizzle.cuh  launch.cu  launch.hpp  mma.hpp  mma_sync.cu  mma_sync_rowblock.cu  warp_wmma.cu  warp_wmma_sync.cu  wmma.hpp  wmma_rowblock.cu  wmma_sync_rowblock.cu  wmma_vectorload_sync_rowblock.cu
pyflash/: CMakeLists.txt  pyflash.cpp
